fix: permanent horizontal scrollbar on sidebar

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -2469,4 +2469,7 @@ hr {
 
 .doc-sidebar-container {
   overflow-y: auto;
+  >div {
+	width: unset;
+  }
 }
